# openvino-quality-suite

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml
.github/workflows/: docs-preview.yml  docs.yml  quality.yml
configs/: base.yaml  ci.yaml  default.yaml  gpu.yaml  local.yaml  prod.yaml
configs/examples/: genai_metric_models.yaml  qwen_int8_cpu.yaml
configs/gates/: default_gates.yaml
configs/suites/: gpu_metric_smoke.yaml  openvino_llm_quality_v1.yaml
docs/: architecture.md  ci_cd.md  data_formats.md  genai_model_matrix.md  gpu_requirements.md  index.md  integrations.md  long_context.md  metric_playbook.md  metrics.md  openvino_runners.md  rag_agent.md  remote_gpu_from_scratch.md  reports_and_gates.md  skills.md  usage.md
docs/developers/: adding-a-metric.md  adding-a-renderer.md  adding-an-analysis-rule.md  index.md  plugin-entry-points.md  testing-and-quality.md
docs/examples/bundles/gated-regression/: analysis.json  dashboard.html  index.md  metadata.json  metrics.csv  report.json  sample_metrics.jsonl
docs/examples/bundles/gpu-suite-smoke/: analysis.json  dashboard.html  index.md  metrics.csv  report.json  sample_metrics.jsonl
docs/examples/bundles/minimal-likelihood/: analysis.json  dashboard.html  index.md  metadata.json  metrics.csv  report.json  sample_metrics.jsonl
docs/explanation/: architecture.md  evaluation-surfaces.md  metric-philosophy.md  reporting-model.md
docs/how-to/: configure-gates.md  generate-a-metrics-table.md  integrate-in-ci.md  run-a-suite.md  troubleshoot-reporting.md  use-trend-history.md  validate-a-report.md
docs/metric_details/: agent.md  distribution_drift.md  generation.md  likelihood.md  long_context.md  performance.md  rag.md  serving.md
docs/project/: changelog.md  code-of-conduct.md  contributing.md  release-notes.md  security.md
docs/reference/api/: index.md
docs/reference/api/oviqs/: cli.md  version.md
docs/reference/cli/: compare.md  eval-agent.md  eval-drift.md  eval-likelihood.md  eval-long-context.md  eval-rag.md  eval-serving.md  genai-export-plan.md  index.md  list-genai-models.md  list-metric-references.md  metric-long-context.md  report-analyze.md  report-build.md  report-metrics-table.md  report-reference-comparison.md  report-render.md  report-validate.md  run-gpu-suite.md  run-suite.md
docs/reference/config/: gates.md  profiles.md
docs/reference/metrics/: catalogue.md  playbook.md  references-and-oracles.md
docs/reference/reporting/: analysis-model.md  bundle-layout.md  reporting-spec.md
docs/reference/schemas/: eval-request.md  evaluation-report.md  metric-observation.md  report-bundle.md  sample-metric.md
docs/start/: index.md  installation.md  quickstart.md
docs/tutorials/: build-a-report-bundle.md  compare-against-a-baseline.md  first-local-run.md  run-the-gpu-suite.md
examples/: 01_likelihood_ppl.py  02_drift_vs_reference.py  03_long_context_suite.py  04_ovms_lm_eval.md  05_rag_eval.py  06_agent_trace_eval.py
requirements/: gpu-target-models.txt  gpu-transformers-main.txt  gpu.txt  integrations.txt  lighteval.txt
scripts/: remote_gpu_extended_gpt2_metrics.py  remote_gpu_from_scratch.sh  remote_gpu_standard_metric_matrix.py  remote_gpu_target_models.sh  remote_gpu_validated_gpt2.sh
scripts/docs/: build_api_pages.py  build_cli_reference.py  build_example_bundles.py  build_schema_docs.py
scripts/quality/: package_smoke.py
skills/oviqs-development/: SKILL.md
skills/oviqs-evaluation/: SKILL.md
skills/oviqs-gpu-metrics/: SKILL.md
skills/oviqs-integrations/: SKILL.md
skills/oviqs-metric-references/: SKILL.md
src/oviqs/: __init__.py  cli.py
src/oviqs/adapters/: errors.py
src/oviqs/aggregation/: __init__.py  buckets.py  compare.py  gates.py  scorecards.py  statistics.py
src/oviqs/core/: __init__.py  errors.py  logging.py  metric.py  registry.py  report.py  runner.py  sample.py  trace.py  types.py
src/oviqs/datasets/: __init__.py  agent.py  controlled_long_context.py  helmet.py  jsonl.py  longbench.py  rag.py  ruler.py
src/oviqs/integrations/: base.py  deepeval_adapter.py  lighteval_adapter.py  lm_eval_adapter.py  opencompass_adapter.py  openevals_adapter.py  opik_adapter.py  phoenix_adapter.py  promptfoo_adapter.py  ragas_adapter.py
src/oviqs/metrics/: __init__.py  agent.py  composite.py  distribution_drift.py  generation.py  likelihood.py  long_context.py  performance.py  robustness.py  serving.py
src/oviqs/models/: __init__.py  genai_matrix.py
src/oviqs/ports/: __init__.py  analysis.py  artifacts.py  datasets.py  model_registry.py  observability.py  plugins.py  reporting.py  runners.py  storage.py  tokenizers.py
src/oviqs/references/: __init__.py  registry.py
src/oviqs/reporting/: __init__.py  html_report.py  json_report.py  markdown_report.py  plots.py  reference_comparison.py
src/oviqs/runners/: __init__.py  dummy.py  hf_reference.py  openvino_genai.py  openvino_runtime.py  optimum_openvino.py  ovms_openai.py
src/oviqs/tokenization/: __init__.py  chat_template.py  hashing.py  tokenizer.py
src/oviqs/utils/: arrays.py  env.py  io.py  math.py  progress.py  reproducibility.py
tests/contracts/: test_reporting_contracts.py
tests/fixtures/reports/: golden_reporting_html_smoke.txt  golden_reporting_markdown.md  golden_reporting_metrics.csv
tests/integration/: test_dummy_runner_suite.py  test_gpu_suite_cli.py  test_metric_cli_sections.py  test_openvino_runtime_smoke.py  test_report_cli_namespace.py  test_small_hf_runner.py
tests/unit/: test_agent_metrics.py  test_architecture_layers.py  test_buckets.py  test_distribution_drift.py  test_docs_architecture.py  test_external_integrations.py  test_gates.py  test_genai_matrix.py  test_likelihood.py  test_long_context.py  test_metric_references.py  test_openvino_runtime_runner.py  test_rag_metrics.py  test_report_schema.py  test_reporting_refactor.py  test_serving_metrics.py
(+315 files in other folders)
